# resetusb

./: CMakeLists.txt  LICENSE.txt  README.rst
src/: resetusb.c
